# pegasus

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  main.py  pyproject.toml  start.ps1
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: Dockerfile  build_civic_services_geojson.py  config.py  models.py  scrape_scheduler.py  test_context_memory.py  test_full_pipeline_results.json  webhook_server.py
backend/agents/: README.md  mayor_chat.py  news_tools.py  prompts.py  roadmap_agent.py  tool_registry.py  tools.py  web_search_tool.py
backend/api/: README.md  deps.py  main.py
backend/chatbot/: README.md  __init__.py  answer_content.py  answer_content_civic.py  answer_content_misc.py  answer_templates.py  context_constants.py  context_memory.py  date_utils.py  entities.py  followup.py  intents.py  (+11 more)
brightdata/: crawl_medicaid_20260306_071903.json  jobs_indeed_20260306_071226.json  jobs_indeed_20260306_071903.json  serp_20260306_071226.json  serp_20260306_071903.json  test_sdk.py
docs/: CLAUDE.md  IMPLEMENTATION_SUMMARY.md  MontgomeryAI_Technical_Feasibility_Data_Catalog.docx  NEWS_FEATURE_DOCS.md  REVALIDATION_REPORT.md  VALIDATION_REPORT.md  bright-data-integration.md  build-notes-session-2.md  build-notes-session-3.md  capabilities-and-possibilities.md  civic-guide-reference.md  codebase-review.md  data-catalog.md  gcp-setup.md
frontend/: Dockerfile  README.md  docker-entrypoint.sh  index.html  nginx.conf.template  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
montgomery-navigator/: package-lock.json  tailwind.config.ts  vite.config.ts
revampUI/: code.html
scripts/: __init__.py  bright_data_client.py  build_business_growth.py  config.py  job_scraper_service.py  redis_client.py  scrape_gov_services.py  scrape_news.py  scrape_scheduler.py  scrape_transit.py  sentiment_rules.py  sse_broadcaster.py  test_brightdata.py  test_brightdata_results.json  test_context_memory.py  test_full_job_pipeline.py  test_geocode_jobs.py  test_geocoded_jobs.json  webhook_server.py
(+519 files in other folders)
